Fix HTML encoding issues in blog.html

--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
                 <div class="flex items-center space-x-6 text-sm font-medium">
                     <!-- Nav Links -->
                     <a href="indexpage.html" class="nav-link text-dark transition duration-150">Home</a>
-                    <a href="gallery.html" class="nav-link text-dark transition duration-150">Photographs</a>
+                    <a href="photograph.html" class="nav-link text-dark transition duration-150">Photographs</a>
                     
                     <!-- Events Dropdown -->
                     <div class="relative group">
@@ -65,7 +65,7 @@
 
                     <!-- About Us Dropdown -->
                     <div class="relative group">
-                        <a href="about.html" class="nav-link text-dark flex items-center transition duration-150">
+                        <a href="aboutus.html" class="nav-link text-dark flex items-center transition duration-150">
                             About Us
                             <svg class="ml-1 h-4 w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                         </a>
@@ -78,7 +78,7 @@
                     </div>
 
                     <a href="blog.html" class="nav-link text-dark transition duration-150" style="color: var(--primary-gold); border-bottom: 2px solid var(--primary-gold);">Blog</a>
-                    <a href="#" class="nav-link text-dark transition duration-150">Contact</a>
+                    <a href="contact.html" class="nav-link text-dark transition duration-150">Contact</a>
                     
                     <!-- Bell Icon (Notification/Contact) -->
                     <button class="text-dark hover:text-opacity-80 transition duration-150">
