--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="flex items-center space-x-6 text-sm font-medium">
                     <!-- Nav Links -->
-                    <a href="indexpage.html" class="nav-link text-dark transition duration-150">Home</a>
+                    <a href="index.html" class="nav-link text-dark transition duration-150">Home</a>
                     <a href="photograph.html" class="nav-link text-dark transition duration-150">Photographs</a>
                     
                     <!-- Events Dropdown -->
@@ -150,3 +150,4 @@
 
 </body>
 </html>
+
