--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                 
                 <!-- Desktop Menu Items -->
                 <div class="hidden md:flex md:space-x-8 items-center">
-                    <a href="indexpage.html" class="text-gray-600 font-medium hover-text-gold transition duration-150 py-2">Home</a>
+                    <a href="index.html" class="text-gray-600 font-medium hover-text-gold transition duration-150 py-2">Home</a>
                     <a href="photograph.html" class="text-gray-600 font-medium hover-text-gold transition duration-150 py-2">Photographs</a>
                     <a href="events.html" class="text-gray-600 font-medium hover-text-gold transition duration-150 py-2">Events</a>
                     <a href="aboutus.html" class="text-gray-600 font-medium hover-text-gold transition duration-150 py-2">About Us</a>
@@ -280,4 +280,5 @@
         }
     </script>
 </body>
+
 </html>
