Fix HTML formatting and structure

--- a/photograph.html
+++ b/photograph.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="flex items-center space-x-6 text-sm font-medium">
                     <!-- Nav Links -->
-                    <a href="indexpage.html" class="nav-link text-dark transition duration-150">Home</a>
+                    <a href="index.html" class="nav-link text-dark transition duration-150">Home</a>
                     <a href="gallery.html" class="nav-link text-dark transition duration-150" style="color: var(--primary-gold); border-bottom: 2px solid var(--primary-gold);">Photographs</a>
                     
                     <!-- Events Dropdown -->
@@ -193,3 +193,4 @@
 
 </body>
 </html>
+
