Change gallery images to local files
Updated image sources for gallery items to use local files instead of WhatsApp images.

--- a/photograph.html
+++ b/photograph.html
@@ -105,7 +105,7 @@
 
             <!-- Gallery Item 1: Traditional Wedding -->
             <div class="rounded-xl overflow-hidden shadow-lg border border-gray-100 transition duration-300 hover:shadow-2xl cursor-pointer">
-                <img src="WhatsApp%20Image%202025-11-21%20at%2012.16.44%20PM%20(1).jpeg" 
+                <img src="traditionpic.jpg" 
                      alt="Traditional Wedding" 
                      onerror="this.onerror=null;this.src='https://placehold.co/800x600/D4D4D4/808080?text=Traditional+Wedding'"
                      class="w-full h-80 object-cover">
@@ -117,7 +117,7 @@
 
             <!-- Gallery Item 2: Haldi Ceremony -->
             <div class="rounded-xl overflow-hidden shadow-lg border border-gray-100 transition duration-300 hover:shadow-2xl cursor-pointer">
-                <img src="WhatsApp%20Image%202025-11-21%20at%2012.16.42%20PM%20(2).jpeg" 
+                <img src="haldi.jpg" 
                      alt="Haldi Ceremony" 
                      onerror="this.onerror=null;this.src='https://placehold.co/800x600/D4D4D4/808080?text=Haldi+Ceremony'"
                      class="w-full h-80 object-cover">
@@ -129,7 +129,7 @@
 
             <!-- Gallery Item 3: Couple Portrait -->
             <div class="rounded-xl overflow-hidden shadow-lg border border-gray-100 transition duration-300 hover:shadow-2xl cursor-pointer">
-                <img src="WhatsApp%20Image%202025-11-21%20at%2012.16.42%20PM%20(1).jpeg" 
+                <img src="couplepotraite.jpg" 
                      alt="Couple Portrait" 
                      onerror="this.onerror=null;this.src='https://placehold.co/800x600/D4D4D4/808080?text=Couple+Portrait'"
                      class="w-full h-80 object-cover">
@@ -141,7 +141,7 @@
 
             <!-- Gallery Item 4: Blue Dress Photoshoot -->
             <div class="rounded-xl overflow-hidden shadow-lg border border-gray-100 transition duration-300 hover:shadow-2xl cursor-pointer">
-                <img src="WhatsApp%20Image%202025-11-21%20at%2012.16.45%20PM.jpeg" 
+                <img src="background1.jpg" 
                      alt="Blue Dress Photoshoot" 
                      onerror="this.onerror=null;this.src='https://placehold.co/800x600/D4D4D4/808080?text=Elegant+Portrait'"
                      class="w-full h-80 object-cover">
@@ -153,7 +153,7 @@
 
             <!-- Gallery Item 5: Child Portrait -->
             <div class="rounded-xl overflow-hidden shadow-lg border border-gray-100 transition duration-300 hover:shadow-2xl cursor-pointer">
-                <img src="WhatsApp%20Image%202025-11-21%20at%2012.16.45%20PM%20(2).jpeg" 
+                <img src="babyshoot.jpg" 
                      alt="Child Portrait" 
                      onerror="this.onerror=null;this.src='https://placehold.co/800x600/D4D4D4/808080?text=Child+Portrait'"
                      class="w-full h-80 object-cover">
@@ -165,7 +165,7 @@
 
             <!-- Gallery Item 6: Save the Date Silhouette -->
             <div class="rounded-xl overflow-hidden shadow-lg border border-gray-100 transition duration-300 hover:shadow-2xl cursor-pointer">
-                <img src="WhatsApp%20Image%202025-11-21%20at%2012.16.44%20PM.jpeg" 
+                <img src="savethedate.jpg" 
                      alt="Save the Date" 
                      onerror="this.onerror=null;this.src='https://placehold.co/800x600/D4D4D4/808080?text=Save+the+Date'"
                      class="w-full h-80 object-cover">
@@ -193,4 +193,3 @@
 
 </body>
 </html>
-
